# hoyo-assistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml  test_run.yml
config/: config.yaml.template  config_template.yaml
src/hoyo_assistant/: __init__.py  cli.py  server.py
src/hoyo_assistant/core/: __init__.py  config.py  constants.py  loghelper.py  login.py  models.py  push.py  request.py  setting.py  setting_schema.py  tools.py
src/hoyo_assistant/locales/: en_US.json  zh_CN.json
src/hoyo_assistant/runner/: __init__.py  multi_account.py  single_account.py
src/hoyo_assistant/tasks/: __init__.py
src/hoyo_assistant/tasks/base/: __init__.py
src/hoyo_assistant/tasks/chinese/: cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/cn/: cloud_games.py
src/hoyo_assistant/tasks/community/: __init__.py  miyoushe.py
src/hoyo_assistant/tasks/os/: cloud_games.py  game_signin.py
src/hoyo_assistant/tasks/overseas/: cloud_games.py
src/hoyo_assistant/tasks/web/: __init__.py  activities.py
tests/: conftest.py  test_account.py  test_cli.py  test_cloud_games.py  test_i18n.py  test_login.py  test_login_extended.py  test_push.py  test_request.py  test_runner.py  test_server.py  test_setting.py  test_smoke.py  test_tasks.py  test_tools.py
