[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoyo-assistant"
version = "1.0.0"
description = "Your personal HoYoLAB/MiYoUShe daily task automation assistant"
readme = "README.md"
license = "MIT"
keywords = ["hoyolab", "miyoushe", "genshin", "honkai", "star-rail", "zzz", "automation"]
authors = [
    { name = "arisvia", email = "160387885+arisvia@users.noreply.github.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles",
    "aiodns",
    "aiohttp[speedups]",
    "cachetools",
    "loguru",
    "pytz",
    "PyYAML",
    "rich",
    "tenacity",
    "pydantic-settings",
    "orjson",
    "mypy",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "types-aiofiles",
    "types-cachetools",
    "types-PyYAML",
    "types-pytz",
]

[project.scripts]
hoyo-cli = "hoyo_assistant.cli:main"
hoyo-assistant = "hoyo_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/arisvia/hoyo-assistant"
Repository = "https://github.com/arisvia/hoyo-assistant"
Issues = "https://github.com/arisvia/hoyo-assistant/issues"

[tool.setuptools]
packages = ["hoyo_assistant", "hoyo_assistant.core", "hoyo_assistant.runner", "hoyo_assistant.tasks", "hoyo_assistant.tasks.base", "hoyo_assistant.tasks.chinese", "hoyo_assistant.tasks.community", "hoyo_assistant.tasks.overseas", "hoyo_assistant.tasks.web"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
hoyo_assistant = ["locales/*.json", "py.typed"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=hoyo_assistant --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
